修复编译BUG